<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">There are no products saved</string>
    <string name="empty_view_subtitle_text">Use the Add Product button below to save a new product</string>
    <string name="details_category_overview">Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_price">Product Price</string>
    <string name="hint_product_supplier">Supplier email</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="quantity"># of pcs</string>
    <string name="category_image">Image</string>
    <string name="details_category_supplier">Supplier</string>
    <string name="details_category_quantity">Quantity</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all entries?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_all_products_failed">Deletion of all products failed</string>
    <string name="editor_delete_all_products_successful">All products deleted successfully</string>
    <string name="add_product">Add a product</string>
    <string name="edit_product">Edit product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="negative_quantity_error">No negative quantities please!</string>
    <string name="no_name_error">Product must have a name</string>
    <string name="no_price_error">Product price must be set</string>
    <string name="no_quantity_error">Product quantity must be set</string>
    <string name="no_image_error">Product image must be set</string>
    <string name="insert_product_toast_error">Product saved successfully</string>
    <string name="insert_product_toast_success">Product could not be saved</string>
    <string name="unsaved_changes_dialog_msg">Are you sure you want to exit without saving the product?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete the product?</string>
    <string name="editor_delete_product_failed">Product could not be deleted</string>
    <string name="editor_delete_product_successful">Product has been deleted successfully</string>
    <string name="price">Price:</string>
    <string name="in_stock"># in Stock:</string>
    <string name="order_button">Order</string>
    <string name="delete_button">Delete</string>
    <string name="dummy_name">Coca Cola</string>
    <string name="dummy_desc">Coca Cola 500ml bottle</string>
    <string name="dummy_supplier">cola@cocacola.com</string>
</resources>
