<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/details_category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Product Description field -->
            <EditText
                android:id="@+id/edit_product_description"
                style="@style/EditorFieldStyle"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_description"
                android:inputType="textMultiLine"
                android:lines="3" />

            <!-- Product Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/details_category_supplier" />

        <!-- Product Supplier email field -->
        <EditText
            android:id="@+id/edit_product_supplier"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_product_supplier"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/details_category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:text="@string/button_minus" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="100dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:text="@string/button_plus" />
        </LinearLayout>

    </LinearLayout>

    <!-- Image category -->
    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_image" />

        <ImageView
            android:id="@+id/edit_product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:src="@drawable/imageplaceholder" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button" />
    </LinearLayout>

</LinearLayout>




